# thermal-simulation-scripts

./: .ci.yml  .gitignore  README.md  pyproject.toml  requirements.txt
blender/: thermal_animation_material.blend  thermal_sim_animation_textured.py
designs/: FEMMeshGmsh.inp  blendcfg.yaml  config.json  example.FCStd  polarfire-som-heatspreader.FCStd
paraview/: export_x3d.py
postprocessing/: plot.py  plot_meas.py
src/postprocessing/: blender_animation.sh  compare_csv.py  create_animation.py  create_csv.py  create_plot.py  create_previews.py  create_x3d.py  generate_gltf.py  generate_svg_palette.py  main.py  material.blend  plot_comparison.py  plot_meas.py  process_blend.py  raport.py
src/preprocessing/: bisect.sh  bisection.py  calculate_coef.py  common.py  config.py  find_coef.sh  get_settings.py  main.py  parse_config.py  parse_fcstd.py  prepare.py  push_coefs.sh  raport.py  report.py  set_coef.py  set_coeff.py  simulate.sh
